--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "anydoor",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/http.js",
+  "bin": {
+    "anydoor": "bin/anydoor"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +19,9 @@
   },
   "homepage": "https://github.com/Kerchhhhh/anydoor#readme",
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "curl": "^0.1.4",
+    "handlebars": "^4.7.7",
+    "yargs": "^17.2.1"
   },
   "description": ""
 }
